# OverwatchTournamentAnalyser

./: LICENSE  json_worker.py  main.py  pyproject.toml
data/: logger.py
data_worker_app/: data_converter.py  data_visualyser.ipynb
neuro_app/: neuro.ipynb
parser_app/: crawler.py  parser.py  utils.py
