[project]
name = "owanalyser"
version = "0.1.0"
description = "overwatch tournament analyser and match result predictor with binary classification"
authors = [
    {name = "Esternit",email = "92298236+Esternit@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.12.13)",
    "aiosignal (==1.3.2)",
    "anyio (==4.9.0)",
    "argon2-cffi (==25.1.0)",
    "argon2-cffi-bindings (==21.2.0)",
    "arrow (==1.3.0)",
    "asttokens (==3.0.0)",
    "async-lru (==2.0.5)",
    "async-timeout (==5.0.1)",
    "asyncio (==3.4.3)",
    "attrs (==25.3.0)",
    "babel (==2.17.0)",
    "backports-tarfile (==1.2.0)",
    "beautifulsoup4 (==4.13.4)",
    "bleach (==6.2.0)",
    "bs4 (==0.0.2)",
    "build (==1.2.2.post1)",
    "cachecontrol (==0.14.3)",
    "certifi (==2025.6.15)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.2)",
    "cleo (==2.1.0)",
    "colorama (==0.4.6)",
    "comm (==0.2.2)",
    "contourpy (==1.3.0)",
    "crashtest (==0.4.1)",
    "cycler (==0.12.1)",
    "debugpy (==1.8.14)",
    "decorator (==5.2.1)",
    "defusedxml (==0.7.1)",
    "distlib (==0.3.9)",
    "dulwich (==0.22.8)",
    "exceptiongroup (==1.3.0)",
    "executing (==2.2.0)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.18.0)",
    "findpython (==0.6.3)",
    "fonttools (==4.58.4)",
    "fqdn (==1.5.1)",
    "frozenlist (==1.7.0)",
    "fsspec (==2025.5.1)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "huggingface-hub (==0.33.0)",
    "idna (==3.10)",
    "importlib-metadata (==8.6.1)",
    "importlib-resources (==6.5.2)",
    "inquirerpy (==0.3.4)",
    "installer (==0.7.0)",
    "ipykernel (==6.29.5)",
    "ipython (==8.18.1)",
    "ipywidgets (==8.1.7)",
    "isoduration (==20.11.0)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.1.0)",
    "jedi (==0.19.2)",
    "jinja2 (==3.1.6)",
    "joblib (==1.5.1)",
    "json5 (==0.12.0)",
    "jsonpointer (==3.0.0)",
    "jsonschema (==4.24.0)",
    "jsonschema-specifications (==2025.4.1)",
    "jupyter (==1.1.1)",
    "jupyter-client (==8.6.3)",
    "jupyter-console (==6.6.3)",
    "jupyter-core (==5.8.1)",
    "jupyter-events (==0.12.0)",
    "jupyter-lsp (==2.2.5)",
    "jupyter-server (==2.16.0)",
    "jupyter-server-terminals (==0.5.3)",
    "jupyterlab (==4.4.3)",
    "jupyterlab-pygments (==0.3.0)",
    "jupyterlab-server (==2.27.3)",
    "jupyterlab-widgets (==3.0.15)",
    "keyring (==25.6.0)",
    "kiwisolver (==1.4.7)",
    "markupsafe (==3.0.2)",
    "matplotlib (==3.9.4)",
    "matplotlib-inline (==0.1.7)",
    "mistune (==3.1.3)",
    "more-itertools (==10.7.0)",
    "msgpack (==1.1.1)",
    "multidict (==6.4.4)",
    "nbclient (==0.10.2)",
    "nbconvert (==7.16.6)",
    "nbformat (==5.10.4)",
    "nest-asyncio (==1.6.0)",
    "notebook (==7.4.3)",
    "notebook-shim (==0.2.4)",
    "numpy (==2.0.2)",
    "overrides (==7.7.0)",
    "packaging (==25.0)",
    "pandas (==2.3.0)",
    "pandocfilters (==1.5.1)",
    "parso (==0.8.4)",
    "pbs-installer (==2025.6.12)",
    "pfzy (==0.3.4)",
    "pillow (==11.2.1)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.3.8)",
    "poetry (==2.1.3)",
    "poetry-core (==2.1.3)",
    "prometheus-client (==0.22.1)",
    "prompt-toolkit (==3.0.51)",
    "propcache (==0.3.2)",
    "psutil (==7.0.0)",
    "pure-eval (==0.2.3)",
    "pycparser (==2.22)",
    "pygments (==2.19.1)",
    "pyparsing (==3.2.3)",
    "pyproject-hooks (==1.2.0)",
    "python-dateutil (==2.9.0.post0)",
    "python-json-logger (==3.3.0)",
    "pytz (==2025.2)",
    "pywin32 (==310)",
    "pywin32-ctypes (==0.2.3)",
    "pywinpty (==2.0.15)",
    "pyyaml (==6.0.2)",
    "pyzmq (==27.0.0)",
    "rapidfuzz (==3.13.0)",
    "referencing (==0.36.2)",
    "requests (==2.32.4)",
    "requests-toolbelt (==1.0.0)",
    "rfc3339-validator (==0.1.4)",
    "rfc3986-validator (==0.1.1)",
    "rpds-py (==0.25.1)",
    "scikit-learn (==1.6.1)",
    "scipy (==1.13.1)",
    "seaborn (==0.13.2)",
    "send2trash (==1.8.3)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sklearn (==0.0)",
    "sniffio (==1.3.1)",
    "soupsieve (==2.7)",
    "stack-data (==0.6.3)",
    "terminado (==0.18.1)",
    "threadpoolctl (==3.6.0)",
    "tinycss2 (==1.4.0)",
    "tomli (==2.2.1)",
    "tomlkit (==0.13.3)",
    "tornado (==6.5.1)",
    "tqdm (==4.67.1)",
    "traitlets (==5.14.3)",
    "trove-classifiers (==2025.5.9.12)",
    "types-python-dateutil (==2.9.0.20250516)",
    "typing-extensions (==4.14.0)",
    "tzdata (==2025.2)",
    "uri-template (==1.3.0)",
    "urllib3 (==2.4.0)",
    "uv (==0.7.13)",
    "virtualenv (==20.31.2)",
    "wcwidth (==0.2.13)",
    "webcolors (==24.11.1)",
    "webencodings (==0.5.1)",
    "websocket-client (==1.8.0)",
    "widgetsnbextension (==4.0.14)",
    "xgboost (==2.1.4)",
    "yarl (==1.20.1)",
    "zipp (==3.23.0)",
    "zstandard (==0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
